log/build_2024-03-26_16-30-57/turtlesim_catch_them_all/stderr.log
  File "/home/saeesh/ros2_ws/install/turtlesim_catch_them_all/lib/python3.10/site-packages/turtlesim_catch_them_all/turtle_spawner.py", line 12
    from my_robot_interfaces.
                             ^
SyntaxError: invalid syntax

